--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ ctgov:
   restart: always
   environment:
     OPENTRIALS_DATABASE_URL:
-    DOWNLOAD_DELAY: 10
+    OPENTRIALS_DOWNLOAD_DELAY: 10
 
 # isrctn.com
 isrctn:
@@ -14,4 +14,4 @@ isrctn:
   restart: always
   environment:
     OPENTRIALS_DATABASE_URL:
-    DOWNLOAD_DELAY: 10
+    OPENTRIALS_DOWNLOAD_DELAY: 10
