--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-# clinicaltrials.gov
-ctgov:
-  image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl ctgov -a date_from=2001-01-01
-  restart: always
-  environment:
-    OPENTRIALS_DATABASE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 10
-
-# isrctn.com
+# ISRCTN: isrctn.com
 isrctn:
   image: tutum.co/roll/opentrials-scraper
   command: scrapy crawl isrctn -a date_from=2001-01-01
   restart: always
   environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DATABASE_URL: # from environment
+    OPENTRIALS_DOWNLOAD_DELAY: 10
+
+# NCT: clinicaltrials.gov
+nct:
+  image: tutum.co/roll/opentrials-scraper
+  command: scrapy crawl nct -a date_from=2001-01-01
+  restart: always
+  environment:
+    OPENTRIALS_DATABASE_URL: # from environment
     OPENTRIALS_DOWNLOAD_DELAY: 10
