--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,36 @@
-# ISRCTN: isrctn.com
+# ISRCTN
+# isrctn.com
+
 isrctn:
   image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl isrctn -a date_from=2001-01-01
+  command: scrapy crawl isrctn
   restart: always
   environment:
     OPENTRIALS_DATABASE_URL: # from environment
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
-# NCT: clinicaltrials.gov
+isrctn-2016:
+  image: tutum.co/roll/opentrials-scraper
+  command: scrapy crawl isrctn -a date_from=2016-01-01
+  restart: always
+  environment:
+    OPENTRIALS_DATABASE_URL: # from environment
+    OPENTRIALS_DOWNLOAD_DELAY: 10
+
+# NCT
+# clinicaltrials.gov
+
 nct:
   image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl nct -a date_from=2001-01-01
+  command: scrapy crawl nct
+  restart: always
+  environment:
+    OPENTRIALS_DATABASE_URL: # from environment
+    OPENTRIALS_DOWNLOAD_DELAY: 10
+
+nct-2016:
+  image: tutum.co/roll/opentrials-scraper
+  command: scrapy crawl nct -a date_from=2016-01-01
   restart: always
   environment:
     OPENTRIALS_DATABASE_URL: # from environment
