--- a/mario.yml
+++ b/mario.yml
@@ -3,18 +3,8 @@
 build:
   - docker build -t tutum.co/roll/opentrials-scraper .
 
-check:
-  - review
-  - test
-
-create:
-  tutum stack create --sync -n opentrials-scraper -f docker-compose.yml
-
 deploy:
-  - tutum stack update --sync -f docker-compose.yml opentrials-scraper
-  - tutum stack redeploy opentrials-scraper
-
-login:
+  - ${CI?"Deployment is avaiable only on CI/CD server"}
   - docker login
     -e $OPENTRIALS_TUTUM_EMAIL
     -u $OPENTRIALS_TUTUM_USER
@@ -23,15 +13,14 @@ login:
   - tutum login
     -u $OPENTRIALS_TUTUM_USER
     -p $OPENTRIALS_TUTUM_PASS
+  - docker push tutum.co/roll/opentrials-scraper
+  - tutum stack inspect opentrials_scraper ||
+    tutum stack create --sync -f docker-compose.yml -n opentrials-scraper
+  - tutum stack update --sync -f docker-compose.yml opentrials-scraper
 
-push:
-  docker push tutum.co/roll/opentrials-scraper
-
-serve:
-  docker-compose up
-
-review:
-  pylama scraper
+preview:
+  - docker-compose up
 
 test:
-  py.test -vs tests
+  - pylama scraper
+  - py.test -vs tests
