--- a/stacks/sample.yml
+++ b/stacks/sample.yml
@@ -2,21 +2,21 @@
 
 euctr:
   image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl euctr -a date_from=2015-01-01 -a date_to=2015-01-31
+  command: scrapy crawl euctr -a date_from=2015-01-01 -a date_to=2015-01-31 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 isrctn:
   image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl isrctn -a date_from=2015-01-01 -a date_to=2015-01-31
+  command: scrapy crawl isrctn -a date_from=2015-01-01 -a date_to=2015-01-31 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 nct:
   image: tutum.co/roll/opentrials-scraper
-  command: scrapy crawl nct -a date_from=2015-01-01 -a date_to=2015-01-05
+  command: scrapy crawl nct -a date_from=2015-01-01 -a date_to=2015-01-05 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
