--- a/stacks/entire.yml
+++ b/stacks/entire.yml
@@ -1,5 +1,12 @@
 # Scrape all data from registers
 
+actrn:
+  image: tutum.co/roll/opentrials-scraper
+  command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 10
+
 euctr:
   image: tutum.co/roll/opentrials-scraper
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
