--- a/stacks/recent.yml
+++ b/stacks/recent.yml
@@ -1,5 +1,13 @@
 # Scrapy only recently updated trials
 
+actrn:
+  image: tutum.co/roll/opentrials-scraper
+  command: scrapy crawl actrn -L INFO
+  restart: always
+  environment:
+    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 10
+
 euctr:
   image: tutum.co/roll/opentrials-scraper
   command: scrapy crawl euctr -L INFO
