fixed stack naming

--- a/mario.yml
+++ b/mario.yml
@@ -14,17 +14,17 @@ deploy:
     -p $OPENTRIALS_DOCKER_PASS
   - docker push opentrialsrobot/scraper
   # Entire
-  - tutum stack inspect opentrials-scraper-entire ||
-    tutum stack create --sync -f stacks/entire.yml -n opentrials-scraper-entire
-  - tutum stack update --sync -f stacks/entire.yml opentrials-scraper-entire
+  - tutum stack inspect scraper-entire ||
+    tutum stack create --sync -f stacks/entire.yml -n scraper-entire
+  - tutum stack update --sync -f stacks/entire.yml scraper-entire
   # Recent
-  - tutum stack inspect opentrials-scraper-recent ||
-    tutum stack create --sync -f stacks/recent.yml -n opentrials-scraper-recent
-  - tutum stack update --sync -f stacks/recent.yml opentrials-scraper-recent
+  - tutum stack inspect scraper-recent ||
+    tutum stack create --sync -f stacks/recent.yml -n scraper-recent
+  - tutum stack update --sync -f stacks/recent.yml scraper-recent
   # Sample
-  - tutum stack inspect opentrials-scraper-sample ||
-    tutum stack create --sync -f stacks/sample.yml -n opentrials-scraper-sample
-  - tutum stack update --sync -f stacks/sample.yml opentrials-scraper-sample
+  - tutum stack inspect scraper-sample ||
+    tutum stack create --sync -f stacks/sample.yml -n scraper-sample
+  - tutum stack update --sync -f stacks/sample.yml scraper-sample
 
 preview:
   - docker-compose -f stacks/sample.yml up
