fixed entire stack

--- a/stacks/entire.yml
+++ b/stacks/entire.yml
@@ -1,28 +1,28 @@
 # Scrape all data from registers
 
 actrn:
-  image: tutum.co/roll/opentrials-scraper
+  image: opentrialsrobot/scraper
   command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 euctr:
-  image: tutum.co/roll/opentrials-scraper
+  image: opentrialsrobot/scraper
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 isrctn:
-  image: tutum.co/roll/opentrials-scraper
+  image: opentrialsrobot/scraper
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 nct:
-  image: tutum.co/roll/opentrials-scraper
+  image: opentrialsrobot/scraper
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
   environment:
     OPENTRIALS_DATABASE_URL:
