--- a/stacks/entire.yml
+++ b/stacks/entire.yml
@@ -21,6 +21,13 @@ isrctn:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
+jprn:
+  image: opentrialsrobot/scraper
+  command: scrapy crawl jprn -a page_from=1 -a page_to=100000 -L INFO
+  environment:
+    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
+
 nct:
   image: opentrialsrobot/scraper
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
