--- a/stacks/sample.yml
+++ b/stacks/sample.yml
@@ -21,6 +21,13 @@ isrctn:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
+jprn:
+  image: opentrialsrobot/scraper
+  command: scrapy crawl jprn -a page_from=43 -a page_to=46 -L INFO
+  environment:
+    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
+
 nct:
   image: opentrialsrobot/scraper
   command: scrapy crawl nct -a date_from=2015-01-01 -a date_to=2015-01-05 -L INFO
