--- a/stacks/entire.yml
+++ b/stacks/entire.yml
@@ -14,6 +14,13 @@ euctr:
     OPENTRIALS_DATABASE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
+gsk:
+  image: opentrialsrobot/scraper
+  command: scrapy crawl gsk -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
+
 isrctn:
   image: opentrialsrobot/scraper
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
