--- a/stacks/entire.yml
+++ b/stacks/entire.yml
@@ -4,40 +4,33 @@ actrn:
   image: opentrialsrobot/scraper
   command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 euctr:
   image: opentrialsrobot/scraper
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_DATABASE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-
-gsk:
-  image: opentrialsrobot/scraper
-  command: scrapy crawl gsk -a date_from=2001-01-01 -L INFO
-  environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 isrctn:
   image: opentrialsrobot/scraper
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 jprn:
   image: opentrialsrobot/scraper
   command: scrapy crawl jprn -a page_from=1 -a page_to=100000 -L INFO
   environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
 
 nct:
   image: opentrialsrobot/scraper
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_DATABASE_URL:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
