--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,19 @@
 # Call `source env.export` before invocation in dev environment.
 
 
+# Base
+# base service template
+base:
+  image: opentrialsrobot/scraper
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+
+
 # Migrate
 # run database migrations
 
 migrate:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: alembic upgrade head
 
 
@@ -14,51 +22,45 @@ migrate:
 # scrape only recently updated trials
 
 update-actrn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl actrn -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-euctr:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl euctr -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-gsk:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl gsk -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-isrctn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl isrctn -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-jprn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl jprn -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-nct:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl nct -L INFO
   restart: always
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 
@@ -66,36 +68,25 @@ update-nct:
 # scrape all data from registers
 
 prepare-actrn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-euctr:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
+
+prepare-gsk:
+  extends: {service: base}
+  command: scrapy crawl gsk -a date_from=2001-01-01 -L INFO
 
 prepare-isrctn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-jprn:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl jprn -a page_from=1 -a page_to=100000 -L INFO
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-nct:
-  image: opentrialsrobot/scraper
+  extends: {service: base}
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
