--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,11 @@
 # Call `source env.export` before invocation in dev environment.
 
 
-# Base
-# base service template
-base:
-  image: opentrialsrobot/scraper
-  environment:
-    OPENTRIALS_WAREHOUSE_URL:
-
-
 # Migrate
 # run database migrations
 
 migrate:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: alembic upgrade head
 
 
@@ -22,45 +14,51 @@ migrate:
 # scrape only recently updated trials
 
 update-actrn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl actrn -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-euctr:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl euctr -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-gsk:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl gsk -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-isrctn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl isrctn -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-jprn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl jprn -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 update-nct:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl nct -L INFO
   restart: always
   environment:
+    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
 
 
@@ -68,25 +66,36 @@ update-nct:
 # scrape all data from registers
 
 prepare-actrn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-euctr:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
-
-prepare-gsk:
-  extends: {service: base}
-  command: scrapy crawl gsk -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-isrctn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-jprn:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl jprn -a page_from=1 -a page_to=100000 -L INFO
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
 
 prepare-nct:
-  extends: {service: base}
+  image: opentrialsrobot/scraper
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_DOWNLOAD_DELAY: 1
