fixed migrate script in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@
 migrate:
   image: opentrialsrobot/scraper
   command: alembic upgrade head
+  environment:
+    OPENTRIALS_WAREHOUSE_URL:
 
 
 # Update
