--- a/stacks/scraper-prepare-takeda.yml
+++ b/stacks/scraper-prepare-takeda.yml
@@ -1,6 +1,6 @@
 script:
   image: opentrialsrobot/scraper
-  command: scrapy crawl pfizer -L INFO
+  command: scrapy crawl takeda -L INFO
   environment:
     OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
