--- a/stacks/scraper-update.yml
+++ b/stacks/scraper-update.yml
@@ -32,8 +32,8 @@ ictrp:
   environment:
     OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 10
-    ICTRP_USER:
-    ICTRP_PASS:
+    OPENTRIALS_ICTRP_USER:
+    OPENTRIALS_ICTRP_PASS:
 
 isrctn:
   image: opentrialsrobot/scraper
