--- a/stacks/make-initial-scraping.yml
+++ b/stacks/make-initial-scraping.yml
@@ -5,29 +5,33 @@ actrn:
   image: okibot/collectors
   command: scrapy crawl actrn -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 euctr:
   image: okibot/collectors
   command: scrapy crawl euctr -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 gsk:
   image: okibot/collectors
   command: scrapy crawl gsk -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 ictrp:
   image: okibot/collectors
   command: scrapy crawl ictrp -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
     OPENTRIALS_ICTRP_USER:
     OPENTRIALS_ICTRP_PASS:
 
@@ -35,33 +39,38 @@ isrctn:
   image: okibot/collectors
   command: scrapy crawl isrctn -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 jprn:
   image: okibot/collectors
   command: scrapy crawl jprn -a page_from=1 -a page_to=100000 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 nct:
   image: okibot/collectors
   command: scrapy crawl nct -a date_from=2001-01-01 -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 pfizer:
   image: okibot/collectors
   command: scrapy crawl pfizer -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
 
 takeda:
   image: okibot/collectors
   command: scrapy crawl takeda -L INFO
   environment:
-    OPENTRIALS_WAREHOUSE_URL:
     OPENTRIALS_DOWNLOAD_DELAY: 1
+    OPENTRIALS_WAREHOUSE_URL:
+    OPENTRIALS_LOGGING_URL:
