removed opentrials_ prefix from env vars

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Export: set -a; source .env
-OPENTRIALS_WAREHOUSE_URL=<url>
-OPENTRIALS_LOGGING_URL=<url>
-OPENTRIALS_ICTRP_USER=<user>
-OPENTRIALS_ICTRP_PASS=<pass>
+WAREHOUSE_URL=<url>
+LOGGING_URL=<url>
+ICTRP_USER=<user>
+ICTRP_PASS=<pass>
