--- a/stacks/make-initial-collecting.yml
+++ b/stacks/make-initial-collecting.yml
@@ -5,80 +5,80 @@ actrn:
   image: okibot/collectors
   command: make start actrn 2001-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 euctr:
   image: okibot/collectors
   command: make start euctr 2001-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 gsk:
   image: okibot/collectors
   command: make start gsk 2001-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 ictrp:
   image: okibot/collectors
   command: make start ictrp
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
-    OPENTRIALS_ICTRP_USER:
-    OPENTRIALS_ICTRP_PASS:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
+    ICTRP_USER:
+    ICTRP_PASS:
 
 isrctn:
   image: okibot/collectors
   command: make start isrctn 2001-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 jprn:
   image: okibot/collectors
   command: make start jprn 1 100000
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 nct:
   image: okibot/collectors
   command: make start nct 2001-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 pfizer:
   image: okibot/collectors
   command: make start pfizer
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 pubmed:
   image: okibot/collectors
   command: make start pubmed 1900-01-01 2100-01-01
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
 
 takeda:
   image: okibot/collectors
   command: make start takeda
   environment:
-    OPENTRIALS_DOWNLOAD_DELAY: 1
-    OPENTRIALS_WAREHOUSE_URL:
-    OPENTRIALS_LOGGING_URL:
+    DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
