--- a/stacks/make-initial-collecting.yml
+++ b/stacks/make-initial-collecting.yml
@@ -17,11 +17,32 @@ euctr:
     WAREHOUSE_URL:
     LOGGING_URL:
 
+fda:
+  image: okibot/collectors
+  command: make start fda
+  environment:
+    WAREHOUSE_URL:
+    LOGGING_URL:
+
 gsk:
   image: okibot/collectors
   command: make start gsk 2001-01-01
   environment:
     DOWNLOAD_DELAY: 1
+    WAREHOUSE_URL:
+    LOGGING_URL:
+
+icdcm:
+  image: okibot/collectors
+  command: make start icdcm
+  environment:
+    WAREHOUSE_URL:
+    LOGGING_URL:
+
+icdpcs:
+  image: okibot/collectors
+  command: make start icdpcs
+  environment:
     WAREHOUSE_URL:
     LOGGING_URL:
 
