--- a/stacks/make-initial-collecting.yml
+++ b/stacks/make-initial-collecting.yml
@@ -17,9 +17,9 @@ euctr:
     WAREHOUSE_URL:
     LOGGING_URL:
 
-fda:
+fdadl:
   image: okibot/collectors
-  command: make start fda
+  command: make start fdadl
   environment:
     WAREHOUSE_URL:
     LOGGING_URL:
