improved env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Export: set -a; source .env
-WAREHOUSE_URL=<url>
-LOGGING_URL=<url>
-ICTRP_USER=<user>
-ICTRP_PASS=<pass>
+WAREHOUSE_URL='postgres://<user>:<pass>@localhost:5432/<database>'
+LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
+ICTRP_USER='<user>'  # optional
+ICTRP_PASS='<pass>'  # optional
