improved env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Export: set -a; source .env
-WAREHOUSE_URL='postgres://<user>:<pass>@localhost:5432/<database>'
+# Dockerhost: ip route | awk '/docker0/ { print $NF }'
+WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 ICTRP_USER='<user>'  # optional
 ICTRP_PASS='<pass>'  # optional
