Feature/hra collector (#27)
* Added code for filling warehouse which fails with a weird Postgresql Error

* Added Record.ensure as False

* First version of the collector to get historic data from the API

* Added a check to find if application_ already in database before insertion

* Fixed screipt for pep8 compliance

* Made correctionsto: remove .py~ files, py2/3 compatible string conversion, proper structure of project, added parsing funct. in parser.py

* Made correctionsto: remove .py~ files, py2/3 compatible string conversion, proper structure of project, added parsing funct. in parser.py

* Moved write functionality to collector

* fixed indentation for code in _get_to_date function

* fixed string formatting in _make_request function

* Removed unused variable - parse_datetime

* New version, collector starts at earlist record and collects until today

* Removed extra arguments from parse function

* Using meta_updated for last updated field, for finding dafe from changed from max(updated_date) to max(published_date)

* Added sleep/exit logic

* fixed hra collector

* fixed hra migration

* fixes to hra collector

* fixed hra_id

* fixed lint error

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 ICTRP_USER='<user>'  # optional
 ICTRP_PASS='<pass>'  # optional
+HRA_ENV='<STAGING/PRODUCTION>'  # optional
+HRA_URL='<url>'  # optional
+HRA_USER='<user>'  # optional
+HRA_PASS='<pass>'  # optional
