moved ensure_fields logic to PYTHON_ENV

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Export: set -a; source .env
 # Dockerhost: ip route | awk '/docker0/ { print $NF }'
+PYTHON_ENV='development'
 WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 ICTRP_USER='<user>'  # optional
